workspace = { members = ["lonecli"] }
[package]
name = "lonelybot"
version = "0.2.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lonelybot"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
rand_mt = "4.2.2"
arrayvec = { version = "0.7.4", default-features = false }
hashbrown = { version = "0.14", default-features = false }
static_assertions = "1.1.0"
uint = { version = "0.9.5", default-features = false }

[dev-dependencies]
criterion = "0.5.1"


[profile.release]
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0
lto = "thin"

[[bench]]
name = "gen_moves"
harness = false
