workspace = { members = ["lonecli"] }
[package]
name = "lonelybot"
version = "0.2.3"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lonelybot"
path = "src/lib.rs"
crate-type = ["lib"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
rand_mt = "5.0"
arrayvec = { version = "0.7.4", default-features = false }
hashbrown = { version = "0.15", default-features = false }
static_assertions = "1.1.0"
uint = { version = "0.10", default-features = false }

[dev-dependencies]
criterion = "0.5.1"


[profile.release]
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0
lto = "thin"

[[bench]]
name = "gen_moves"
harness = false
