[package]
name = "lonecli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "lonecli"
path = "src/main.rs"


[dependencies]
colored = "2.1.0"
bpci = "0.1.0"
signal-hook = "0.3.17"
clap = { version = "4.4.18", features = ["derive"] }
lonelybot = { path = "../" }
rand = "0.8.5"
