[package]
name = "lonecli"
version = "0.2.3"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "lonecli"
path = "src/main.rs"


[dependencies]
colored = "2.1.0"
bpci = "0.1.0"
signal-hook = "0.3.17"
clap = { version = "4.5.3", features = ["std", "derive"] }
lonelybot = { path = "../" }
rand = { version = "0.9", default-features = false, features = ["std_rng"] }

[dev-dependencies]
serde_json = "1.0.117"